--- a/src/DashAgil.Web/src/app/dashboard/email/email.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/email/email.component.html
@@ -8,8 +8,8 @@
               <mat-tab-group>
                 <mat-tab label="Status dos Emails">
                   <div class="row" class="w-100">
-                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-                      <div echarts [options]="optionsEmail"></div>
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                      <div class="chart" echarts [options]="optionsEmail"></div>
                     </div>
                   </div>
                 </mat-tab>
@@ -18,14 +18,16 @@
                     <mat-table [dataSource]="dataSource" matSort>
                       <ng-container matColumnDef="assunto">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Assunto</mat-header-cell>
-                        <mat-cell *matCellDef="let row">{{row.assunto}}</mat-cell>
+                        <mat-cell *matCellDef="let row">
+                          <span [matTooltip]="row.assunto"> {{row.assunto}}</span>
+                        </mat-cell>
                       </ng-container>
                       <ng-container matColumnDef="conteudo">
                         <mat-header-cell mat-header-cell *matHeaderCellDef mat-sort-header>
                           Conteúdo
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                          {{row.conteudo}}
+                          <span [matTooltip]="row.conteudo">{{row.conteudo}}</span>
                         </mat-cell>
                       </ng-container>
                       <ng-container matColumnDef="remetente">
@@ -33,7 +35,7 @@
                           Remetente
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                          {{row.remetente}}
+                          <span [matTooltip]="row.remetente">{{row.remetente}}</span>
                         </mat-cell>
                       </ng-container>
                       <ng-container matColumnDef="destinatario">
@@ -41,15 +43,17 @@
                           Destinatário
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                          {{row.destinatario}}
+                          <span [matTooltip]="row.destinatario">{{row.destinatario}}</span>
                         </mat-cell>
                       </ng-container>
                       <ng-container matColumnDef="dataCriacao">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>
-                          DataCriação
+                          Data Criação
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                          {{row.dataCriacao}}
+                          <span [matTooltip]="row.dataCriacao">
+                            {{row.dataCriacao}}
+                          </span>
                         </mat-cell>
                       </ng-container>
                       <ng-container matColumnDef="dataEnvio">
@@ -57,7 +61,9 @@
                           Data Envio
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                          {{row.dataEnvio}}
+                          <span [matTooltip]="row.dataEnvio">
+                            {{row.dataEnvio}}
+                          </span>
                         </mat-cell>
                       </ng-container>
                       <ng-container matColumnDef="entregues">
@@ -65,7 +71,7 @@
                           Entregues
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                          {{row.entregues}}
+                          <span [matTooltip]="row.entregues">{{row.entregues}}</span>
                         </mat-cell>
                       </ng-container>
                       <ng-container matColumnDef="lixo">
@@ -73,7 +79,7 @@
                           Lixo
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                          {{row.lixo}}
+                          <span [matTooltip]="row.lixo">{{row.lixo}}</span>
                         </mat-cell>
                       </ng-container>
                       <ng-container matColumnDef="rejeitados">
@@ -81,7 +87,7 @@
                           Rejeitados
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                          {{row.rejeitados}}
+                          <span [matTooltip]="row.rejeitados">{{row.rejeitados}}</span>
                         </mat-cell>
                       </ng-container>
                       <ng-container matColumnDef="abertos">
@@ -89,7 +95,7 @@
                           Abertos
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                          {{row.abertos}}
+                          <span [matTooltip]="row.abertos">{{row.abertos}}</span>
                         </mat-cell>
                       </ng-container>
                       <ng-container matColumnDef="status">
@@ -97,7 +103,7 @@
                           Status
                         </mat-header-cell>
                         <mat-cell *matCellDef="let row">
-                          {{row.status}}
+                          <span class="badge" [ngClass]="defineStatusColor(row.status)"> {{row.status}} </span>
                         </mat-cell>
                       </ng-container>
                       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
